# webpack-bazel-example

./: .gitignore  WORKSPACE.bazel
e2e_tests/: Cargo.toml
e2e_tests/src/: main.rs
frontend/: .prettierrc  BUILD.bazel  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: App.svelte
